# coding-agent

./: .gitignore  README.md  pyproject.toml  run.sh  test_rules.py
.agent/rules/: security-rule.md
.agent/workflows/: instructions.md
src/: logger.py  main.py
src/agent/: agents.py  compress.py  context.py  manager.py  memory.py  orchestrator.py  state.py
src/agent/prompts/: architect.md  coder.md  reviewer.md  tester.md
src/tools/: file_tools.py  git_tools.py  index_tools.py  mcp_manager.py  shell_tools.py
tests/: test_compress.py  test_file_tools.py  test_incremental_index.py
