[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent"
version = "0.1.0"
description = "An AI-powered coding agent built with Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "python-dotenv",
    "pydantic",
    "pyautogen",
    "volcengine-python-sdk",
    "rich",
    "autogen>=0.9.7",
    "openai>=2.14.0",
    "arize-phoenix-otel>=0.14.0",
    "arize-phoenix>=12.15.1",
    "openinference-instrumentation-openai>=0.1.41",
    "openinference-instrumentation-autogen>=0.1.10",
    "llama-index>=0.10.68",
    "llama-index-llms-openai>=0.1.27",
    "llama-index-embeddings-openai>=0.1.11",
    "llama-index-readers-file>=0.1.33",
    "llama-index-vector-stores-chroma>=0.1.10",
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.6",
    "prompt-toolkit>=3.0.52",
]

[tool.setuptools.packages.find]
where = ["src"]
